# rust-get-url

./: .travis.yml  Cargo.toml  appveyor.yml
examples/: get-url.rs
src/: curl.rs  iso_8859_1.rs  lib.rs  wininet.rs
tests/: httpbin.rs
