[package]
name = "get-url"
version = "0.1.0"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

[dependencies]
log = "0.3.6"

[dev-dependencies]
clap = "2.3.0"
rustc-serialize = "0.3.19"

[replace]
"winapi:0.2.8" = { git = "https://github.com/DanielKeep/winapi-rs.git", branch = "wininet" }

[target.i686-pc-windows-gnu.dependencies]
conv = "0.3.3"
winapi = "0.2.8"
wininet-sys = { version = "0.1.0", git = "https://github.com/DanielKeep/winapi-rs.git", branch = "wininet" }
wio = "0.1.1"

[target.x86_64-pc-windows-gnu.dependencies]
conv = "0.3.3"
winapi = "0.2.8"
wininet-sys = { version = "0.1.0", git = "https://github.com/DanielKeep/winapi-rs.git", branch = "wininet" }
wio = "0.1.1"

[target.i686-pc-windows-msvc.dependencies]
conv = "0.3.3"
winapi = "0.2.8"
wininet-sys = { version = "0.1.0", git = "https://github.com/DanielKeep/winapi-rs.git", branch = "wininet" }
wio = "0.1.1"

[target.x86_64-pc-windows-msvc.dependencies]
conv = "0.3.3"
winapi = "0.2.8"
wininet-sys = { version = "0.1.0", git = "https://github.com/DanielKeep/winapi-rs.git", branch = "wininet" }
wio = "0.1.1"

[target.i686-apple-darwin.dependencies]
curl = "0.2.19"

[target.x86_64-apple-darwin.dependencies]
curl = "0.2.19"

[target.i686-unknown-linux-gnu.dependencies]
curl = "0.2.19"

[target.x86_64-unknown-linux-gnu.dependencies]
curl = "0.2.19"
